snapshots/care/data4life/hc-result-sdk-kmp/error/0.2.0-SNAPSHOT/error-0.2.0-20210922.132251-3.pom.sha1
08de8aeb43fb8362619f60b0263c484616f8005e